--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -85,8 +85,10 @@ h1, h3, p
 		padding: 1.4rem 1.4rem 1.4rem 6rem
 	@include lg
 		padding: 1.4rem
-	//@include md
-	//	width: 40%
+	@include sm
+		padding: .8rem
+		width: 60%
+
 	.logo-name
 		font-family: $logo-font
 		font-size: 54px
@@ -95,6 +97,7 @@ h1, h3, p
 		display: none
 		transition: all .3s linear
 		white-space: nowrap
+		padding-right: .4rem
 		@include rwd(1400)
 			font-size: 36px
 		@include xl
@@ -105,6 +108,8 @@ h1, h3, p
 		display: flex
 		@include lg
 			padding: 0 2rem
+		@include sm
+			padding: 0
 		.lang-button
 			font-family: $default-font
 			font-size: 1.8rem
@@ -117,6 +122,7 @@ h1, h3, p
 			@include lg
 				padding: 0 .8rem
 				font-size: 1.4rem
+
 		.lang-button.active
 			color: $accent
 .transparent-button
@@ -126,16 +132,22 @@ h1, h3, p
 	font-size: 1.6rem
 	color: $accent
 	white-space: nowrap
+	padding: 0 1rem
 	@include md
 		font-size: 1.4rem
+	@include sm
+		font-size: 1.2rem
+		padding: 0 .4rem
+
 .header_right
 	display: flex
 	padding: 1.4rem
 	width: 50%
 	justify-content: flex-end
 	align-items: center
-	//@include md
-	//	width: 60%
+	@include sm
+		padding: .8rem
+		//width: 20%
 	.phones
 		display: flex
 		flex-direction: column
@@ -174,6 +186,19 @@ h1, h3, p
 	@include md
 		font-size: 1.4rem
 		min-width: 10rem
+#call-btn
+	i
+		display: none
+	@include sm
+		min-width: 4rem
+		i
+			display: block
+
+		span
+			display: none
+
+
+
 .main-header.active
 	transition: all .3s linear
 	background-color: rgba(255, 230, 230, .7)
@@ -222,6 +247,8 @@ main
 	//height: 100vh
 	min-height: 100%
 	display: flex
+	@include sm
+		flex-direction: column
 	.main-section_left
 		padding: 18rem 4rem 10rem 10rem
 		width: 50%
@@ -235,6 +262,9 @@ main
 		@include md
 			width: 60%
 			padding: 12rem 1rem 4rem 6rem
+		@include sm
+			width: 100%
+			padding: 8rem 2rem 4rem 4rem
 		.top-info
 			//width: 80%
 			h1
@@ -314,6 +344,9 @@ main
 		@include md
 			background-position: 26% 50%
 			width: 40%
+		@include sm
+			width: 100%
+			height: 40rem
 		.main-signature
 			margin: 0
 			padding: 1.4rem
@@ -343,20 +376,27 @@ main
 	padding: 10rem 0 0 0
 	@include xl
 		padding: 6rem 0 0 0
+	@include sm
+		padding: 4rem 0
 .left-right-wrapper
 	display: flex
 	align-items: center
-.default-section_left
+.about-me-section_left
 	padding: 0 0 4rem 10rem
 	@include lg
 		padding: 0 6rem 4rem
 	@include md
 		padding: 0 6rem 0
-.default-section_right
+	@include sm
+		padding: 0 4rem 0 6rem
+.about-me-section_right
 	padding: 0 10rem 4rem 1rem
 	height: 300px
 	@include lg
 		padding: 0 6rem 4rem
+	@include sm
+		padding: 0 4rem 2rem 6rem
+		height: 200px
 	iframe
 		width: 100%
 		height: 100%
@@ -383,6 +423,8 @@ main
 	align-items: center
 	width: 100%
 	margin: 0
+	@include sm
+		padding: 0 6rem
 .one-feature
 	height: auto
 	display: flex
@@ -416,6 +458,8 @@ main
 		background-position: top
 		@include md
 			background-position: 60% 50%
+		@include sm
+			display: none
 	.top-appeals_right
 		width: 60%
 		padding: 10rem 10rem 13rem
@@ -423,6 +467,9 @@ main
 			padding: 6rem 10rem 6rem 4rem
 		@include lg
 			padding: 6rem 6rem 6rem 4rem
+		@include sm
+			width: 100%
+			padding: 4rem 6rem
 		.row
 			width: 100%
 			margin: 0
@@ -442,6 +489,8 @@ main
 		padding: 6rem
 	@include md
 		flex-direction: column
+	@include sm
+		padding: 4rem 4rem 4rem 6rem
 .subscribe-section_left
 	width: 50%
 	@include lg
@@ -469,6 +518,8 @@ main
 		@include md
 			width: 76%
 			padding-bottom: 0
+		@include sm
+			width: 100%
 
 
 .gallery-section
@@ -478,6 +529,8 @@ main
 		padding: 6rem 10rem 10rem
 	@include lg
 		padding: 6rem
+	@include sm
+		padding: 4rem
 	.photo-wrapper
 		margin-top: 10rem
 		display: grid
@@ -490,14 +543,22 @@ main
 		@include lg
 			grid-template-columns: 1fr 1fr
 			//grid-template-rows: repeat(9, 180px)
+		@include sm
+			grid-template-rows: repeat(12, 200px)
+			grid-template-columns: 1fr
+			margin-top: 2rem
 		.one-photo
 			background-color: #cbbde2
 			width: 100%
 			//height: 240px
 		.photo-item2
 			grid-row: span 2
+			@include sm
+				grid-row: span 1
 		.photo-item5
 			grid-row: span 2
+			@include sm
+				grid-row: span 1
 		.photo-item6
 			grid-row: span 2
 			grid-column: span 2
@@ -521,10 +582,14 @@ main
 	padding: 10rem 0
 	@include xl
 		padding: 6rem 0
+	@include sm
+		padding: 4rem 0
 	.default-head
 		padding-left: 10rem
 		@include lg
 			padding-left: 6rem
+		@include sm
+			padding-left: 4rem
 
 	.videofeedback-wrapper
 		display: flex
@@ -534,6 +599,8 @@ main
 			width: 100%
 			//height: 300px
 			padding: 3.2rem 6rem
+			@include sm
+				padding: 0 4rem
 			.onefeedback-wrapper
 				padding: 0 2rem
 				height: 300px
@@ -544,6 +611,8 @@ main
 					padding: 1.4rem 6rem
 				@include md
 					padding: 1.4rem 0
+				@include sm
+					height: 200px
 				iframe
 					height: 100%
 					width: 100%
@@ -553,6 +622,9 @@ main
 	.facebook-subscribe
 		padding-top: 6rem
 		width: 500px
+		@include sm
+			padding-top: 3rem
+			width: 300px
 
 
 .button-wrapper
@@ -561,6 +633,8 @@ main
 .contacts-section
 	background-color: $main-color
 	display: flex
+	@include sm
+		flex-direction: column
 	.contacts-section_left
 		width: 50%
 		padding: 10rem 0 10rem 16rem
@@ -568,6 +642,9 @@ main
 			padding: 6rem 0 6rem 16rem
 		@include lg
 			padding: 6rem 0 6rem 6rem
+		@include sm
+			padding: 4rem 4rem 2rem
+			width: 100%
 	.contacts-section_right
 		width: 50%
 		padding: 10rem 16rem 10rem 0
@@ -575,6 +652,9 @@ main
 			padding: 6rem 16rem 6rem 0
 		@include lg
 			padding: 6rem 6rem 6rem 0
+		@include sm
+			padding: 2rem 4rem 4rem
+			width: 100%
 		.contacts-form
 			min-width: 24rem
 			width: 80%
