--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -206,6 +206,9 @@ h1, h3, p
 		.logo-name
 			display: block
 			transition: all .3s linear
+		.transparent-button
+			@include xs
+				display: none
 	.phones
 		.phone-number
 			color: #000
@@ -281,6 +284,8 @@ main
 					font-size: 9rem
 				@include lg
 					font-size: 6rem
+				@include xs
+					font-size: 4rem
 				//@include md
 				//	font-size: 4.4rem
 			.buy-button
@@ -391,7 +396,9 @@ main
 		padding: 0 4rem 0 6rem
 .about-me-section_right
 	padding: 0 10rem 4rem 1rem
-	height: 300px
+	height: 400px
+	@include xl
+		height: 300px
 	@include lg
 		padding: 0 6rem 4rem
 	@include sm
@@ -413,6 +420,8 @@ main
 	@include md
 		padding: 1rem 0
 		font-size: 2.4rem
+	@include xs
+		font-size: 2rem
 .about-features
 	//background-color: $main-color
 	//padding: 3rem 10rem
@@ -425,6 +434,8 @@ main
 	margin: 0
 	@include sm
 		padding: 0 6rem
+	@include xs
+		padding: 0 4rem
 .one-feature
 	height: auto
 	display: flex
@@ -443,6 +454,7 @@ main
 		border-radius: $radius
 		font-size: 1.4rem
 		line-height: 1.5
+
 
 
 
@@ -470,6 +482,8 @@ main
 		@include sm
 			width: 100%
 			padding: 4rem 6rem
+		@include xs
+			padding: 4rem
 		.row
 			width: 100%
 			margin: 0
@@ -491,6 +505,8 @@ main
 		flex-direction: column
 	@include sm
 		padding: 4rem 4rem 4rem 6rem
+	@include xs
+		padding: 4rem 2rem 4rem 4rem
 .subscribe-section_left
 	width: 50%
 	@include lg
@@ -531,6 +547,8 @@ main
 		padding: 6rem
 	@include sm
 		padding: 4rem
+	//@include xs
+	//	padding: 4rem 2rem 4rem 4rem
 	.photo-wrapper
 		margin-top: 10rem
 		display: grid
@@ -613,6 +631,7 @@ main
 					padding: 1.4rem 0
 				@include sm
 					height: 200px
+
 				iframe
 					height: 100%
 					width: 100%
@@ -625,11 +644,15 @@ main
 		@include sm
 			padding-top: 3rem
 			width: 300px
+		@include xs
+			width: 200px
 
 
 .button-wrapper
 	display: flex
 	justify-content: flex-end
+	@include xs
+		width: 200px
 .contacts-section
 	background-color: $main-color
 	display: flex
@@ -655,6 +678,8 @@ main
 		@include sm
 			padding: 2rem 4rem 4rem
 			width: 100%
+		@include xs
+			padding: 2rem 2rem 4rem 4rem
 		.contacts-form
 			min-width: 24rem
 			width: 80%
@@ -667,10 +692,14 @@ main
 				input
 					width: inherit
 					padding: 1.4rem
+					@include xs
+						width: 200px
 				textarea
 					width: inherit
 					height: 14rem
 					padding: 1.4rem
+					@include xs
+						width: 200px
 
 
 footer
