--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2079,6 +2079,54 @@ body {
 h1, h3, p {
   margin: 0; }
 
+.preloader {
+  background-color: #FFE6E6;
+  z-index: 1000;
+  position: fixed;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; }
+  .preloader .sk-spinner-pulse {
+    width: 16rem;
+    height: 16rem;
+    margin: auto;
+    background-color: #fff;
+    -webkit-border-radius: 100%;
+            border-radius: 100%;
+    -webkit-animation: sk-spinner-pulse 1.0s infinite ease-in-out;
+            animation: sk-spinner-pulse 1.0s infinite ease-in-out; }
+
+@-webkit-keyframes sk-spinner-pulse {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0; } }
+
+@keyframes sk-spinner-pulse {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0); }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 0; } }
+
 .fixed {
   position: fixed;
   width: 100%; }
