--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -67,6 +67,34 @@ body
 
 h1, h3, p
 	margin: 0
+
+.preloader
+	background-color: $main-color
+	z-index: 1000
+	position: fixed
+	display: flex
+	align-items: center
+	justify-content: center
+	top: 0
+	right: 0
+	bottom: 0
+	left: 0
+	.sk-spinner-pulse
+		width: 16rem
+		height: 16rem
+		margin: auto
+		background-color: #fff
+		border-radius: 100%
+		animation: sk-spinner-pulse 1.0s infinite ease-in-out
+
+@keyframes sk-spinner-pulse
+	0%
+		transform: scale(0)
+
+	100%
+		transform: scale(1.0)
+		opacity: 0
+
 .fixed
 	position: fixed
 	width: 100%
