--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2320,6 +2320,7 @@ button {
   font-size: 1.6rem;
   border: none;
   min-width: 22rem;
+  height: 6.2rem;
   white-space: nowrap;
   -webkit-transition: all .3s linear;
   -o-transition: all .3s linear;
