--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -225,6 +225,7 @@ button
 	font-size: 1.6rem
 	border: none
 	min-width: 22rem
+	height: 6.2rem
 	white-space: nowrap
 	transition: all .3s linear
 	&:hover
